[package]
name = "bevy_replicon_snap"
version = "0.2.0"
edition = "2021"
authors = ["Ben Dzaebel <ben@bendz.dev>"]
hompage = "bendz.dev"
license_file = "/LICENCE"
repository = "https://github.com/Bendzae/bevy_replicon_snap"
categories = ["game-development", "network-programming"]
keywords = ["networking", "bevy", "snapshot", "interpolation", "prediction"]
description = "High-level networking crate that extends the bevy_replicon crate to allow snapshot interpolation and client-side prediction"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0", default_features = false }
bevy_replicon = "0.24.1"
bevy_replicon_renet = "0.1.0"
serde = "1.0"

bevy_replicon_snap_macros = { path = "macros" }

[dev-dependencies]
clap = { version = "4.1", features = ["derive"] }
bevy = { version = "0.13.0", default-features = false, features = [
    "bevy_asset",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_gizmos",
    "x11",
    "default_font",
] }
